--- a/massis3-examples-utils/pom.xml
+++ b/massis3-examples-utils/pom.xml
@@ -11,7 +11,28 @@
     <artifactId>massis3-examples-utils</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
+
     <build>
+        <resources>
+            <resource>
+                <directory>src/main/java</directory>
+                <excludes>
+                    <exclude>**/*.java</exclude>
+                </excludes>
+            </resource>
+            <resource>
+                <directory>src/main/resources</directory>
+                <excludes>
+                    <exclude>**/*.java</exclude>
+                </excludes>
+            </resource>
+        </resources>
+
+        <plugins>
+
+        </plugins>
+    </build>
+    <!--<build>
         <plugins>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
@@ -36,5 +57,5 @@
                 <filtering>true</filtering>
             </resource>
         </resources>
-    </build>
+    </build>-->
 </project>
